[tool.poetry]
name = "manthan-chatbot"
version = "0.1.0"
description = ""
authors = ["Pariwartan Singh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^1.0.1"
black = "^24.4.2"
isort = "^5.13.2"
langchain = "^0.2.1"
langchain-openai = "^0.1.8"
langgraph = "^0.0.60"
streamlit = "^1.35.0"
streamlit-chat = "^0.1.1"
pymongo = "^4.7.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
